--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/auth-next": "^5.0.0-1607967355.df8f01e",
+    "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/bulma": "^1.3.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
